--- a/pom.xml
+++ b/pom.xml
@@ -56,15 +56,13 @@
 		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>3.141.59</version>
+			<!-- <version>3.141.59</version> -->
+			<version>3.14.0</version>
+
 		</dependency>
 
-		<!-- <dependency>
-			<groupId>io.github.bonigarcia</groupId>
-			<artifactId>webdrivermanager</artifactId>
-			<version>3.7.1</version>
-			<scope>test</scope>
-		</dependency> -->
+		<!-- <dependency> <groupId>io.github.bonigarcia</groupId> <artifactId>webdrivermanager</artifactId> 
+			<version>3.7.1</version> <scope>test</scope> </dependency> -->
 
 	</dependencies>
 </project>
